--- a/frontend/main.css
+++ b/frontend/main.css
@@ -61,3 +61,11 @@ input[type="number"] {
     #cc5cdc 100%
   );
 }
+
+.bg-bubble-1 {
+  @apply fixed rounded-full opacity-[0.5] md:opacity-[0.7] top-[10vh] right-[-25vw] lg:right-[-5vw] xl:top-[16vh] 2xl:right-[-10vw] !blur-[70px];
+}
+
+.bg-bubble-2 {
+  @apply fixed rounded-full opacity-[1] md:opacity-[0.8] bottom-[-20vh] right-[-25vw] lg:right-0 lg:-bottom-20 2xl:right-0 !blur-[70px];
+}
