--- a/frontend/main.css
+++ b/frontend/main.css
@@ -50,3 +50,14 @@ input[type="number"] {
   -webkit-text-fill-color: transparent !important;
   -moz-text-fill-color: transparent !important;
 }
+
+.nfid-gradient-bar {
+  background: linear-gradient(
+    90deg,
+    #3dedd7 0%,
+    #02cdfe 25%,
+    #3781f4 50.52%,
+    #7063ff 76.04%,
+    #cc5cdc 100%
+  );
+}
