--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1,3 +1,7 @@
+.swiper {
+  @apply overflow-hidden rounded-lg w-min max-w-3xl mr-auto !ml-0;
+}
+
 .swiper-slide {
   @apply flex justify-start w-full flex-col;
 }
