--- a/examples/create-ic-app-react-demo/frontend/index.css
+++ b/examples/create-ic-app-react-demo/frontend/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -86,4 +90,13 @@ button {
 .signout {
   display: flex;
   align-items: center;
+}
+
+#mode:checked ~ .dot {
+  transform: translateX(100%);
+  background: rgb(164, 165, 255)
+}
+
+.iframe {
+  width: 430px !important
 }
