--- a/src/index.css
+++ b/src/index.css
@@ -209,3 +209,115 @@ ul {
   height: 100%;
   background: #3d3f56;
 }
+
+@media only screen and (max-width: 820px) {
+
+  .social-button {
+    width: 156px;
+    height: 60px;
+    border-radius: 4.3px;
+  }
+
+  .blur-pink {
+    max-width: none;
+    right: -14em;
+  }
+
+  .blur-green {
+    height: 200%;
+    width: 350%;
+    margin-top: -85em;
+  }
+
+  .blur-blue.md\:left-\[-85\%\] {
+    width: 310%;
+  }
+
+  main.landing-page {
+    margin-top: -72px;
+  }
+
+  main.landing-page .container {
+    margin-top: 72px;
+  }
+  
+  main.landing-page .container .sm\:text-titleLarge {
+    font-size: 34px;
+    line-height: 44px;
+  }
+
+  main.landing-page .container button.btn-large-max {
+    width: 100%;
+  }
+
+  main.landing-page .container h2.text-lg {
+    font-size: .9rem;
+  }
+
+}
+
+@media only screen and (max-width: 768px) {
+
+  .blur-green {
+    height: 120%;
+    width: 350%;
+    margin-top: -45em;
+  }
+
+}
+
+@media only screen and (max-width: 390px) {
+
+  .blur-green {
+    margin-top: -20em;
+  }
+
+}
+
+@media only screen and (max-width: 375px) {
+
+  .social-button span {
+    font-size: 11.6px;
+  }
+
+  .social-button img {
+    height: 30px;
+  }
+
+  .blur-pink {
+    max-width: none;
+    right: -14em;
+  }
+
+  .blur-green {
+    margin-top: -10em;
+  }
+
+  .blur-blue.md\:left-\[-85\%\] {
+    width: 410%;
+    top: -65em;
+    left: -22em;
+  }
+
+  main.landing-page {
+    margin-top: -72px;
+  }
+
+  main.landing-page .container {
+    margin-top: 0;
+  }
+
+}
+
+@media only screen and (max-width: 320px) {
+
+  .social-button {
+    width: 126px;
+    height: 50px;
+  }
+
+  .blur-blue {
+    top: -25em;
+  }
+
+}
