--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inter:wght@400;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -82,7 +84,7 @@ input[type="number"] {
 }
 
 ul {
-  list-style-type: '— ';
+  list-style-type: "— ";
   list-style-position: outside;
   margin-left: 1.2em;
 }
@@ -124,29 +126,29 @@ ul {
 }
 
 .social-button.discord {
-  background: #5865F2;
+  background: #5865f2;
 }
 
 .social-button.discord:hover {
-  background: #667EFF;
+  background: #667eff;
   box-shadow: 0px 2px 10px rgba(88, 101, 242, 0.6);
 }
 
 .social-button.twitter {
-  background: #1DA1F2;
+  background: #1da1f2;
 }
 
 .social-button.twitter:hover {
-  background: #00C2FF;
+  background: #00c2ff;
   box-shadow: 0px 2px 10px rgba(29, 161, 242, 0.6);
 }
 
 .social-button.github {
-  background: #0F0C0D;
+  background: #0f0c0d;
 }
 
 .social-button.github:hover {
-  background: #4A4748;
+  background: #4a4748;
   box-shadow: 0px 2px 10px rgba(15, 12, 13, 0.4);
 }
 
@@ -176,27 +178,51 @@ ul {
 }
 
 .private-background-blur.big-background-blur {
-  background: radial-gradient(50% 50% at 50% 50%, #923DFF 0%, rgba(21, 87, 255, 0) 100%);
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    #923dff 0%,
+    rgba(21, 87, 255, 0) 100%
+  );
 }
 
 .private-background-blur.small-background-blur {
-  background: radial-gradient(50% 50% at 50% 50%, #DF5EFF 0%, rgba(75, 115, 255, 0.15) 100%);
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    #df5eff 0%,
+    rgba(75, 115, 255, 0.15) 100%
+  );
 }
 
 .convenient-background-blur.big-background-blur {
-  background: radial-gradient(50% 50% at 50% 50%, #A864FF 0%, rgba(255, 21, 204, 0) 100%);
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    #a864ff 0%,
+    rgba(255, 21, 204, 0) 100%
+  );
 }
 
 .convenient-background-blur.small-background-blur {
-  background: radial-gradient(50% 50% at 50% 50%, rgba(255, 211, 98, 0.74) 0%, rgba(226, 218, 17, 0) 100%);
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    rgba(255, 211, 98, 0.74) 0%,
+    rgba(226, 218, 17, 0) 100%
+  );
 }
 
 .secure-background-blur.big-background-blur {
-  background: radial-gradient(50% 50% at 50% 50%, #008C95 0%, rgba(21, 255, 101, 0) 100%);
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    #008c95 0%,
+    rgba(21, 255, 101, 0) 100%
+  );
 }
 
 .secure-background-blur.small-background-blur {
-  background: radial-gradient(50% 50% at 50% 50%, #E0FF62 0%, rgba(253, 255, 168, 0) 100%);
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    #e0ff62 0%,
+    rgba(253, 255, 168, 0) 100%
+  );
 }
 
 .only-with-nfid::before {
@@ -211,7 +237,6 @@ ul {
 }
 
 @media only screen and (max-width: 820px) {
-
   .social-button {
     width: 156px;
     height: 60px;
@@ -240,7 +265,7 @@ ul {
   main.landing-page .container {
     margin-top: 72px;
   }
-  
+
   main.landing-page .container .sm\:text-titleLarge {
     font-size: 34px;
     line-height: 44px;
@@ -251,31 +276,25 @@ ul {
   }
 
   main.landing-page .container h2.text-lg {
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
-
 }
 
 @media only screen and (max-width: 768px) {
-
   .blur-green {
     height: 120%;
     width: 350%;
     margin-top: -45em;
   }
-
 }
 
 @media only screen and (max-width: 390px) {
-
   .blur-green {
     margin-top: -20em;
   }
-
 }
 
 @media only screen and (max-width: 375px) {
-
   .social-button span {
     font-size: 11.6px;
   }
@@ -310,11 +329,9 @@ ul {
   main.landing-page .container .mobile.has-account {
     margin-top: 72px;
   }
-
 }
 
 @media only screen and (max-width: 320px) {
-
   .social-button {
     width: 126px;
     height: 50px;
@@ -323,5 +340,4 @@ ul {
   .blur-blue {
     top: -25em;
   }
-
 }
