--- a/src/index.css
+++ b/src/index.css
@@ -239,6 +239,14 @@ ul {
   background: #3d3f56;
 }
 
+main.landing-page {
+  margin-top: -80px;
+}
+
+main.landing-page .container {
+  margin-top: 80px;
+}
+
 @media only screen and (max-width: 820px) {
   .social-button {
     width: 156px;
@@ -262,7 +270,7 @@ ul {
   }
 
   main.landing-page {
-    margin-top: -72px;
+    margin-top: -80px;
   }
 
   /* main.landing-page .container {
@@ -322,7 +330,7 @@ ul {
   }
 
   main.landing-page {
-    margin-top: -72px;
+    margin-top: -80px;
   }
 
   main.landing-page .container {
@@ -330,7 +338,7 @@ ul {
   }
 
   main.landing-page .container .mobile.has-account {
-    margin-top: 72px;
+    margin-top: 80px;
   }
 }
 
