chore([sc-2588]): implemented useMutationObserver hook

--- a/src/design-system/atoms/button/signin-with-google/styles.css
+++ b/src/design-system/atoms/button/signin-with-google/styles.css
@@ -1,5 +1,5 @@
-/* #credential_picker_container iframe {
+#credential_picker_container iframe {
   display: block;
   margin: 0px auto;
   width: 100% !important;
-} */
+}
