fix([sc-2202]): fixed build by replacing bg-black class

--- a/src/screens/register-account-intro/index.css
+++ b/src/screens/register-account-intro/index.css
@@ -18,8 +18,8 @@
   @apply mb-5 font-bold sm:text-title text-titleMobile;
 }
 
-.swiper-pagination-bullet.swiper-pagination-bullet-active {
-  @apply !rounded-full !w-[20px] !bg-black !h-[2px];
+.swiper-pagination-bullet .swiper-pagination-bullet-active {
+  @apply !rounded-full !w-[20px] bg-[#000] !h-[2px];
 }
 
 .swiper-pagination-bullet {
